Fixed home sidebar on mobile.

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -44,6 +44,27 @@ nav{
     letter-spacing: 1px;
 }
 
+// Home Page Specific Nav Sidebar
+
+.home-sidebar{
+    width: 80%;
+}
+
+.home-links{
+    color: black!important;
+    font-size: 35px!important;
+    margin-right: 100%!important;
+    margin-top: 5%;
+    padding: 0 10%!important;
+    font-style: normal;
+    font-weight: lighter;
+    letter-spacing: 1px;
+}
+
+.home-list{
+    height: 90px;
+}
+
 // Progressive ninety6 logo
 
 #fs-prog-logo{
